k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: dot-net
  name: dot-net
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: dot-net
    weight: 100
